added sign up feature with Clerk

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-VITE_CLERK_PUBLISHABLE_KEY=your_publishable_key_here
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_Z29vZC10YXBpci03MC5jbGVyay5hY2NvdW50cy5kZXYk
+VITE_CLERK_SECRET_KEY=sk_test_6LGQ0GyGrotHcD0RG6tCZaCQE12uFzqEwKloxruXkR
+
+# Ensure this file is in .gitignore
